--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-a11y",
   "version": "0.0.0",
+  "homepage": "./",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
